--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,10 @@ Package: lmcpp
 Title: linear regression model fitting and summary
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Yile",
+           family = "Chen",
            role = c("aut", "cre"),
-           email = "yilechen@umich.edu",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           email = "yilechen@umich.edu")
 Description: lmcpp package is used to fit linear models.
 License: MIT + file LICENSE
 Encoding: UTF-8
